--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,5 @@
     <title>%= htmlWebpackPlugin.options.title %</title>
   </head>
   <body>
-  <script type="text/javascript" src="index.bundle.js"></script><script type="text/javascript" src="index.bundle.js"></script></body>
+  <script type="text/javascript" src="index.bundle.js"></script></body>
 </html>
